# ai-project-builder-cli

./: .gitignore  README.md  pyproject.toml
apb/: __init__.py  __main__.py  ai.py  cli.py  config.py  database.py  github.py  research.py
