[project]
name = "ai-project-builder-cli"
version = "1.0.0"
description = "Professional CLI for AI-powered project generation"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "requests>=2.31.0",
    "inquirer>=3.1.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
]

[project.scripts]
apb = "apb.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
